--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,3 +76,14 @@ spring.servlet.multipart.location=uploads/
 spring.servlet.multipart.max-file-size=5MB
 # Maximum request size (this includes file size and form data)
 spring.servlet.multipart.max-request-size=10MB
+
+spring.elasticsearch.client.certificate=classpath:cert-base64.crt
+
+elasticsearch.host=${ELASTICSEARCH_HOSTNAME:localhost}
+elasticsearch.port=${ELASTICSEARCH_PORT:9200}
+elasticsearch.fingerprint=${ELASTICSEARCH_FINGERPRINT}
+# spring.elasticsearch.uris=https://localhost:9200
+# spring.elasticsearch.username=elastic
+#    # Optional for secured clusters
+# spring.elasticsearch.password=0hvMARb=Q8FBteX8jb*c
+#    # Optional for secured clusters
