--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <hibernate-search.version>7.2.1.Final</hibernate-search.version>
     </properties>
     <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
     <!-- <dependency>
@@ -28,10 +29,33 @@
         <artifactId>jedis</artifactId>
         <version>5.1.3</version>
     </dependency> -->
+    <dependencyManagement>
+        <dependencies>
+
+            <!-- Hibernate Search BOM -->
+            <dependency>
+                <groupId>org.hibernate.search</groupId>
+                <artifactId>hibernate-search-bom</artifactId>
+                <version>${hibernate-search.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <groupId>org.hibernate.search</groupId>
+            <artifactId>hibernate-search-mapper-orm</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.search</groupId>
+            <artifactId>hibernate-search-backend-lucene</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+            <version>3.6.1.Final</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
