--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # spring.application.name=shop1905
 
 
-spring.datasource.url = jdbc:mysql://${MYSQL_HOST}/${DB_NAME}
+spring.datasource.url = jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${DB_NAME}
 spring.datasource.username=${MYSQL_USERNAME:root}
 spring.datasource.password=${MYSQL_PASSWORD}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 # springdoc.api-docs.path=/api-docs
 frontend.host=${FRONTEND_HOST:http://localhost:3000}
 
-spring.data.redis.host=localhost
+spring.data.redis.host=${FRONTEND_HOST:localhost}
 spring.data.redis.port=6379
 
 spring.context.exit-on-refresh=true
@@ -61,9 +61,9 @@ vnpay.order_type=other
 
 #auth google
 
-auth.google.client-id=400096326558-mgsb7hubp2k1p5g80lgtgcfesqtn3kvm.apps.googleusercontent.com
-auth.google.client-secret=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
-auth.google.redirect-uri=http://localhost:3000/authenticate
+auth.google.client-id=${GOOGLE_CLIENT_ID}
+auth.google.client-secret=${GOOGLE_CLIENT_SECRET}
+auth.google.redirect-uri=/authenticate
 
 
 #cache
@@ -77,13 +77,8 @@ spring.servlet.multipart.max-file-size=5MB
 # Maximum request size (this includes file size and form data)
 spring.servlet.multipart.max-request-size=10MB
 
-spring.elasticsearch.client.certificate=classpath:cert-base64.crt
+# Enable Hibernate Search
+spring.jpa.properties.hibernate.search.backend.directory.root = /path/to/lucene/indexes
+spring.jpa.properties.hibernate.search.backend.type = lucene
 
-elasticsearch.host=${ELASTICSEARCH_HOSTNAME:localhost}
-elasticsearch.port=${ELASTICSEARCH_PORT:9200}
-elasticsearch.fingerprint=${ELASTICSEARCH_FINGERPRINT}
-# spring.elasticsearch.uris=https://localhost:9200
-# spring.elasticsearch.username=elastic
-#    # Optional for secured clusters
-# spring.elasticsearch.password=0hvMARb=Q8FBteX8jb*c
-#    # Optional for secured clusters
+# Directory location where indexes will be saved
