--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # spring.application.name=shop1905
 
 
-spring.datasource.url = jdbc:mysql://${MYSQL_HOST}:${MYSQL_PORT}/${DB_NAME}
-spring.datasource.username=${MYSQL_USERNAME:root}
-spring.datasource.password=${MYSQL_PASSWORD}
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${DB_NAME}
+spring.datasource.username=${POSTGRES_USERNAME:root}
+spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
@@ -13,7 +14,7 @@ spring.jpa.show-sql=true
 # springdoc.api-docs.path=/api-docs
 frontend.host=${FRONTEND_HOST:http://localhost:3000}
 
-spring.data.redis.host=${FRONTEND_HOST:localhost}
+spring.data.redis.host=${REDIS_HOST:localhost}
 spring.data.redis.port=6379
 
 spring.context.exit-on-refresh=true
