--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.show-sql=true
 # logging.level.org.springframework.transaction=DEBUG
 # springdoc.api-docs.path=/api-docs
 frontend.host=${FRONTEND_HOST:http://localhost:3000}
+backend.host=${BACKEND_HOST:http://localhost:8080}
 
 spring.data.redis.host=${REDIS_HOST:localhost}
 spring.data.redis.port=6379
